# cpp_test_projects

./: README.md
allocator/: CMakeLists.txt  README.md
allocator/.github/workflows/: release.yaml
allocator/src/: CMakeLists.txt  main.cpp
allocator/src/allocator/: listStrategy.hpp  otusAllocator.hpp  reallocStrategy.hpp
allocator/src/sList/: simpleList.hpp
allocator/test/: CMakeLists.txt  main_test.cpp
asyncBulk/: CMakeLists.txt  README.md
asyncBulk/inc/: command.hpp  cout_writer.hpp  file_writer.hpp  observer.hpp  reader.hpp  worker.hpp
asyncBulk/src/: command.cpp  cout_writer.cpp  file_writer.cpp  main.cpp  reader.cpp  worker.cpp
async_writer/: CMakeLists.txt  README.md  async.cpp  async.hpp  command.cpp  command.hpp  context.cpp  context.hpp  main.cpp  notify_queue.hpp  utility.hpp
async_writer/.github/workflows/: release.yml
async_writer/post_processing/: logging_handler.cpp  logging_handler.hpp  output_handler.cpp  output_handler.hpp  postprocessor.cpp  postprocessor.hpp  postprocessor_handler.cpp  postprocessor_handler.hpp
async_writer/processing/: accumulator.cpp  accumulator.hpp  controller.cpp  controller.hpp  parser.cpp  parser.hpp
async_writer/test/: controller_test.cpp  parser_test.cpp
async_writer/utility/: command.cpp  command.hpp  notify_queue.hpp  utility.hpp
bayan/: .gitignore  CMakeLists.txt  README.md  main.cpp
bayan/.github/workflows/: release.yml
bayan/include/: com_parser.hpp  dir_parser.hpp  file_comparator.hpp  file_dublicate_parser.hpp  file_wrapper.hpp  filter.hpp  mask.hpp  options.hpp
bayan/src/: com_parser.cpp  dir_parser.cpp  file_dublicate_parser.cpp  filter.cpp  mask.cpp
bayan/test/: bayan_test.cpp  mask_test.cpp
bulk_server/: .gitignore  CMakeLists.txt  main.cpp
bulk_server/.github/workflows/: release.yaml
bulk_server/logic/: command.cpp  command.hpp  command_buffer.cpp  command_buffer.hpp  console_writer.cpp  console_writer.hpp  controller.cpp  controller.hpp  file_writer.cpp  file_writer.hpp  global_context.cpp  global_context.hpp  i_writer.cpp  i_writer.hpp  post_controller.cpp  post_controller.hpp
bulk_server/network/: data_handler.cpp  data_handler.hpp  server.cpp  server.hpp  session.cpp  session.hpp
bulk_server/utils/: command_parser.cpp  command_parser.hpp  thread_pool.cpp  thread_pool.hpp
command_parser_v1/: .gitignore  CMakeLists.txt  main.cpp
command_parser_v1/.github/workflows/: release.yml
command_parser_v1/command/: simpleCommand.cpp  simpleCommand.hpp
command_parser_v1/core/: console_writer.cpp  console_writer.hpp  file_writer.cpp  file_writer.hpp  reader.cpp  reader.hpp
command_parser_v1/observer/: observer.hpp
command_parser_v1/tests/: test.cpp
